--- a/cart.html
+++ b/cart.html
@@ -15,7 +15,6 @@
       <a href="index.html">
         <h2>Clothing Store</h2>
       </a>
-
       <a href="cart.html">
         <div class="cart">
           <i class="bi bi-cart4"></i>
@@ -24,8 +23,10 @@
       </a>
     </div>
 
-    <div class="shop" id="shop"></div>
+    <div id="label" class="text-center"></div>
+    <div class="shopping-cart" id="shopping-cart"></div>
+
     <script src="src/data.js"></script>
-    <script src="src/main.js"></script>
+    <script src="src/cart.js"></script>
   </body>
 </html>
