--- a/cart.html
+++ b/cart.html
@@ -29,4 +29,5 @@
     <script src="src/data.js"></script>
     <script src="src/cart.js"></script>
   </body>
+  <footer>&copy; Clothing Store Inc. All rights reserved.</footer>
 </html>
