--- a/index.html
+++ b/index.html
@@ -28,4 +28,5 @@
     <script src="src/data.js"></script>
     <script src="src/main.js"></script>
   </body>
+  <footer>&copy; Clothing Store Inc. All rights reserved.</footer>
 </html>
